--- a/requirements.txt
+++ b/requirements.txt
@@ -10,8 +10,10 @@ chardet==3.0.4
 dj-database-url==0.5.0
 Django==3.0.2
 django-bootstrap4==1.1.1
+django-debug-toolbar==2.2
 django-heroku==0.3.1
 docutils==0.15.2
+future==0.18.2
 gast==0.2.2
 gensim==3.8.1
 google-pasta==0.1.8
@@ -22,6 +24,7 @@ idna==2.8
 jmespath==0.9.4
 Keras-Applications==1.0.8
 Keras-Preprocessing==1.1.0
+line-bot-sdk==1.15.0
 Markdown==3.1.1
 numpy==1.18.1
 opt-einsum==3.1.0
