--- a/requirements.txt
+++ b/requirements.txt
@@ -1,49 +1,31 @@
-absl-py==0.9.0
 asgiref==3.2.3
-astor==0.8.1
 beautifulsoup4==4.8.2
-boto==2.49.0
-boto3==1.11.1
-botocore==1.14.1
 certifi==2019.11.28
 chardet==3.0.4
+defusedxml==0.6.0
 dj-database-url==0.5.0
 Django==3.0.2
+django-allauth==0.41.0
 django-bootstrap4==1.1.1
 django-debug-toolbar==2.2
 django-heroku==0.3.1
-docutils==0.15.2
+django-sendgrid-v5==0.8.1
 future==0.18.2
-gast==0.2.2
-gensim==3.8.1
-google-pasta==0.1.8
-grpcio==1.26.0
 gunicorn==20.0.4
-h5py==2.10.0
 idna==2.8
-jmespath==0.9.4
-Keras-Applications==1.0.8
-Keras-Preprocessing==1.1.0
 line-bot-sdk==1.15.0
-Markdown==3.1.1
-numpy==1.18.1
-opt-einsum==3.1.0
-protobuf==3.11.2
+numpy==1.18.2
+oauthlib==3.1.0
 psycopg2==2.7.5
-psycopg2-binary==2.8.4
-python-dateutil==2.8.1
+psycopg2-binary==2.7.5
+python-http-client==3.2.6
+python3-openid==3.1.0
 pytz==2019.3
 requests==2.22.0
-s3transfer==0.3.0
-scipy==1.4.1
-six==1.13.0
-smart-open==1.9.0
+requests-oauthlib==1.3.0
+schedule==0.6.0
+sendgrid==6.1.3
 soupsieve==1.9.5
 sqlparse==0.3.0
-tensorflow==1.14.0
-tensorflow-estimator==1.14.0
-termcolor==1.1.0
-urllib3==1.25.7
-Werkzeug==0.16.0
+urllib3==1.25.8
 whitenoise==5.0.1
-wrapt==1.11.2
