--- a/.gitignore
+++ b/.gitignore
@@ -3,6 +3,8 @@ __pycache__
 db.sqlite3
 *.DS_Store
 *.py[co]
+*.cfg
+.envrc
 
 # Byte-compiled / optimized / DLL files
 *.py[cod]
@@ -84,6 +86,7 @@ results/
 
 # vectors
 vectors/
+pickle_emb/
 
 # checkpoints
 checkpoints/
@@ -93,3 +96,5 @@ secret.txt
 *.bin
 
 dev.py
+
+bin/
