--- a/requirements.txt
+++ b/requirements.txt
@@ -1,5 +1,11 @@
+absl-py==0.9.0
 asgiref==3.2.3
+astunparse==1.6.3
 beautifulsoup4==4.8.2
+boto==2.49.0
+boto3==1.14.44
+botocore==1.17.44
+cachetools==4.1.1
 certifi==2019.11.28
 chardet==3.0.4
 defusedxml==0.6.0
@@ -10,22 +16,52 @@ django-bootstrap4==1.1.1
 django-debug-toolbar==2.2
 django-heroku==0.3.1
 django-sendgrid-v5==0.8.1
+docutils==0.15.2
 future==0.18.2
+gast==0.3.3
+gensim==3.8.3
+google-auth==1.20.1
+google-auth-oauthlib==0.4.1
+google-pasta==0.2.0
+grpcio==1.31.0
 gunicorn==20.0.4
+h5py==2.10.0
 idna==2.8
+importlib-metadata==1.7.0
+jmespath==0.10.0
+Keras-Preprocessing==1.1.2
 line-bot-sdk==1.15.0
+Markdown==3.2.2
 numpy==1.18.2
 oauthlib==3.1.0
+opt-einsum==3.3.0
+protobuf==3.13.0
 psycopg2==2.7.5
 psycopg2-binary==2.7.5
+pyasn1==0.4.8
+pyasn1-modules==0.2.8
+python-dateutil==2.8.1
 python-http-client==3.2.6
 python3-openid==3.1.0
 pytz==2019.3
 requests==2.22.0
 requests-oauthlib==1.3.0
+rsa==4.6
+s3transfer==0.3.3
 schedule==0.6.0
+scipy==1.4.1
 sendgrid==6.1.3
+six==1.15.0
+smart-open==2.1.0
 soupsieve==1.9.5
 sqlparse==0.3.0
+tensorboard==2.3.0
+tensorboard-plugin-wit==1.7.0
+tensorflow==2.3.0
+tensorflow-estimator==2.3.0
+termcolor==1.1.0
 urllib3==1.25.8
+Werkzeug==1.0.1
 whitenoise==5.0.1
+wrapt==1.12.1
+zipp==3.1.0
